--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,9 @@
     width: 100%;
     height: 100vh;
 }
+
+/* Home Section */
+
 .home{
     background-image: linear-gradient(-35deg, #081b29 0%, #0ef 100%);
     display: flex;
@@ -97,3 +100,5 @@
 .line_through{
     text-decoration: line-through;
 }
+
+/* Progress Section */
